--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ dev = [
     "types-requests>=2.32.4.20250913",
     "types-pyyaml>=6.0.12.20250915",
     "pandas-stubs>=2.3.2.250827",
+    "bandit[toml]>=1.8.6",
 ]
 
 [build-system]
@@ -78,3 +79,8 @@ disable_error_code = ["no-any-return"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["src"]
+
+[tool.bandit]
+exclude_dirs = ["tests", ".venv"]
+skips = ["B101"]  # Skip assert_used test
+severity = "medium"
