--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,18 @@ repos:
       - id: detect-secrets
         args: ['--baseline', '.secrets.baseline']
         exclude: package.lock.json
+
+  # Dockerfile linting
+  - repo: https://github.com/hadolint/hadolint
+    rev: v2.12.0
+    hooks:
+      - id: hadolint-docker
+        args: ['--ignore', 'DL3059']  # Ignore info about consolidating RUN commands
+
+  # Infrastructure security scanning
+  - repo: https://github.com/bridgecrewio/checkov
+    rev: 3.2.331
+    hooks:
+      - id: checkov
+        args: ['--quiet', '--framework', 'dockerfile']
+        files: Dockerfile
